iRedMail-0.8.1:
    * Enforce connections over https in Roundcube.
    * Fix incorrect MySQL user password and databases in MySQL backup script.
    * Fixed:
        + [ldap] Don't require enabledService=smtp for maillist members.
          Thanks rain6966 <uenuan@gmail> for the report.

iRedMail-0.8.0:
    * It now works on OpenBSD. Tested with OpenBSD 5.1.

iRedMail-0.8.0-beta4:
    * Add new value of enabledService: doveadm. Required by Dovecot-2.0
      service doveadm.
    * All clients are forced to use IMAPS and POPS (via STARTTLS).
      To enable POP3/IMAPS without STARTTLS again, set 'ssl=yes' and
      'disable_plaintext_auth=no' in dovecot.conf.
    * Drop support for Dovecot-1.1. At least Dovecot-1.2 is required.
    * Fixed:
        + DEBUG=NO in conf/global breaks postfix installation on FreeBSD.
    * Package update:
        + iRedAdmin -> 0.1.7. It now works with PostgreSQL.
        + iRedAPD -> 1.3.7. It now works with PostgreSQL.

iRedMail-0.8.0-beta3:
    * Enable PostgreSQL support on FreeBSD, RHEL/CentOS 6.
    * Add shell scripts to backup OpenLDAP and/or MySQL in cron by default.
    * Use Dovecot-2.0 instead of 1.2.x on openSUSE-12.1.
    * Drop support for below distributions and releases:
        + Debian 5 (Lenny)
        + Ubuntu 8.x, 9.x, 10.10, 11.04
        + openSUSE: 11.x
        + FreeBSD: 7.x
    * Enable greylist opt-in in Policyd-1.x by default.
    * It now works on Ubuntu Linux 12.04 (precise). Tested on Alpha 2.
    * It now works on Linux Mint 12 (based on Ubuntu, code name: lisa).
    * Add share folder support within Dovecot 2.
    * Fixed:
        + Incorrect postrotate command for dovecot log files.
          Thanks raffayellow@gmail for the report.
        + Two Dovecot config files are world readable: used_quota.conf,
          share-folder.conf.
          Thanks Martin Kuchar for the report.
    * Package update:
        + Roundcube -> 0.7.2
        + MySQL -> 5.5 (FreeBSD)
        + Dovecot -> 2.0 (FreeBSD)