@@ -536,6 +536,7 @@ ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_SIEVE}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_SIEVES}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_DISPLAYED_IN_ADDRBOOK}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_SHADOW_ADDRESS}
+${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_LIB_STORAGE}
 EOF
 
     ldapadd -x -D "${LDAP_ROOTDN}" -w "${LDAP_ROOTPW}" -f ${LDAP_INIT_LDIF} >/dev/null
