@@ -2,6 +2,11 @@ iRedMail-0.8.1:
     * Enforce connections over https in Roundcube.
     * Fix incorrect MySQL user password and databases in MySQL backup script.
     * Fixed:
+        + [ldap] Add new attribute/value required by Dovecot-2 share folder:
+          enabledService=lib-storage.
+          Thanks moreni <fmoreni _at_ simtrack.com.br> for the report.
+        + [mysql & pgsql] Incorrect maildir path while using Postfix built-in
+          'virtual' as transport.
         + [ldap] Don't require enabledService=smtp for maillist members.
           Thanks rain6966 <uenuan@gmail> for the report.
 
